--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docker-exec-websocket-server",
+  "name": "docker-exec-websocket-client",
   "version": "1.4.0",
   "scripts": {
     "test": "./test/runtests.sh"
@@ -13,14 +13,12 @@
   "main": "main.js",
   "dependencies": {
     "debug": "^4.1.1",
-    "dockerode": "^3.2.1",
-    "lodash": "^4.17.19",
-    "slugid": "^2.0.0",
     "through2": "^3.0.1",
     "ws": "^7.1.2"
   },
   "devDependencies": {
     "assume": "^2.2.0",
+    "docker-exec-websocket-server": "^1.4.0",
     "eslint": "^6.4.0",
     "express": "^4.17.1",
     "mocha": "^6.2.0",
@@ -31,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/taskcluster/docker-exec-websocket-server.git"
+    "url": "https://github.com/taskcluster/docker-exec-websocket-client.git"
   },
-  "bugs": "https://github.com/taskcluster/docker-exec-websocket-server/issues"
+  "bugs": "https://github.com/taskcluster/docker-exec-websocket-client/issues"
 }
