--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "docker-exec-websocket-server": "^1.4.0",
     "eslint": "^8.8.0",
     "express": "^4.17.1",
-    "mocha": "^6.2.0",
+    "mocha": "^9.2.0",
     "term.js": "^0.0.7"
   },
   "engines": {
@@ -31,5 +31,10 @@
     "type": "git",
     "url": "https://github.com/taskcluster/docker-exec-websocket-client.git"
   },
-  "bugs": "https://github.com/taskcluster/docker-exec-websocket-client/issues"
+  "bugs": "https://github.com/taskcluster/docker-exec-websocket-client/issues",
+  "mocha": {
+    "ui": "tdd",
+    "timeout": "40s",
+    "reporter": "spec"
+  }
 }
