Install docker-compose to user's bin directory

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -55,7 +55,8 @@ tasks:
                 cd "$REPO_DIR" &&
                 git config advice.detachedHead "false" &&
                 git checkout --no-progress "${head_rev}" &&
-                curl -sL "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose &&
-                chmod +x /usr/local/bin/docker-compose &&
-                /usr/local/bin/docker-compose build --build-arg "NODE_VERSION=${env.node_image_tag}" &&
-                /usr/local/bin/docker-compose run test
+                mkdir -p ~/bin &&
+                curl -sL "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o ~/bin/docker-compose &&
+                chmod +x ~/bin/docker-compose &&
+                ~/bin/docker-compose build --build-arg "NODE_VERSION=${env.node_image_tag}" &&
+                ~/bin/docker-compose run test
