--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "docker-exec-websocket-client",
   "version": "1.4.0",
   "scripts": {
-    "test": "./test/runtests.sh"
+    "test": "mocha ./test/test.js"
   },
   "license": "MPL-2.0",
   "files": [
