Drop node v8, mark v10 as unsupported
Test no longer execute on node v8. Tests pass on node v10, although
package.json specifies v12 as the minimum supported version.

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -20,9 +20,7 @@ tasks:
       - node_image_tag: 12-bullseye
         description: Run tests with node v12
       - node_image_tag: "10"
-        description: Run tests with node v10
-      - node_image_tag: "8"
-        description: Run tests with node v8
+        description: Run tests with node v10 (unsupported)
       - node_image_tag: current-bullseye
         description: Run tests with current node version
   in:
